# AusyCourse

./: Doxyfile  README  main.cpp
build_dir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
headers/: max.h  min.h  operations.h
src/: max.cpp  min.cpp  operations.cpp
unit_test/: test_max.cpp  test_min.cpp  test_operations.cpp
